--- a/styles.css
+++ b/styles.css
@@ -119,3 +119,9 @@ body {
 scrollContent: 'simplebar-scroll-content',
 scrollbar: 'simplebar-scrollbar',
 track: 'simplebar-track' */
+.circle {
+  border-radius: 50%;
+  background-color: rgb(0, 0, 0);
+  width: 10%;
+  height: 40%;
+}
