--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,9 @@ body {
   width: 100%;
   padding: 5px 20px;
   background-color: var(--color-secundario);
+  display: flex;
+  flex-flow: column wrap;
+  border-bottom: 1px solid rgb(118, 117, 117);
 }
 .top_section p {
   color: #868789;
@@ -150,10 +153,55 @@ track: 'simplebar-track' */
 .containerEmoji img {
   width: 80px;
   background: #c6c5c8;
-  transition: all ease 0.5s;
+  transition: filter ease 0.5s;
   margin-left: 0.8rem;
 }
 .containerEmoji img:hover {
   /* border: 5px solid #ae830b; */
   filter: drop-shadow(0 0 1rem #e1700c);
+}
+.exit_container {
+  margin: 20px;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+}
+.rectangle {
+  position: relative;
+  background-color: black;
+  width: 13px;
+  height: 3px;
+  transform: rotate(0deg);
+  margin-top: 5px;
+  left: 20px;
+}
+.rectangle:nth-child(1) {
+  transform: rotate(45deg);
+  left: 5px;
+  bottom: 2px;
+}
+.rectangle:nth-child(2) {
+  left: 18px;
+  bottom: 10px;
+  transform: rotate(135deg);
+}
+.rectangle:nth-child(3) {
+  left: 4px;
+  top: -5px;
+  transform: rotate(135deg);
+}
+.rectangle:nth-child(4) {
+  left: 19px;
+  top: -13px;
+  transform: rotate(225deg);
+}
+.circle_inside_x {
+  position: relative;
+  bottom: 22px;
+  left: 16.5px;
+  background-color: black;
+
+  border-radius: 50%;
+  width: 3px;
+  height: 3px;
 }
